<resources>
    <string name="app_name">AndroVDR</string>
    <string name="tab1_text">RC</string>
    <string name="tab2_text">Play</string>
    <string name="tab3_text">Cut</string>
    <string name="tab_main_text">RC 1</string>
    <string name="tab_numerics_text">RC 2</string>
    <string name="tab_play_text">Play</string>
    <string name="connect_err_vdr">Connect to VDR fails</string>
    <string name="error">Error</string>
    <string name="record">Record</string>
    <string name="portforwarding_fails">Can not activate Portforwarding\n\n</string>
    <string name="start_portforwarding">Starting Portforwarding...\n</string>
    <string name="pw_msg">User Password</string>
    <string name="pw_msg_passphrase">Key Passphrase</string>
    <string name="break_msg">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="warning">Warning</string>
    <string name="message">Message</string>
    <string name="switch_channel">Change Channel</string>
	<string name="white_background">White Background</string>
	<string name="timers_short">Timers</string>
	<string name="loading">Loading ...</string>
	<string name="loading_channels">Loading Channels ...</string>
	<string name="updating">Updating ...</string>
	<string name="programoverview">Overview</string>
	<string name="programoverviewfull">Overview (All)</string>
	<string name="remotecontrol">Remote Control</string>
	<string name="videostream">Videostream</string>
	<string name="videoformat">Videoformat</string>
	<string name="audiostreams">Audiostreams</string>
	<string name="audioformat">Audioformat</string>
	<string name="lifetime">Lifetime</string>
	<string name="priority">Priority</string>
    <string name="duration">"Duration: "</string>
	<string name="searching">Searching ...</string>
    <string name="epgsearch_not_installed">The epgsearch plugin is not installed.</string>
    <string name="epgsearch_hint">Search in EPG</string>
    <string name="search">Search</string>
    <string name="notification_connected_ticker">Connection established</string>
    <string name="notification_connected">Connected with</string>
    <string name="dialog_novdr_title">No VDR configured</string>
    <string name="dialog_novdr_summary">First of all you need to configure at least one VDR.\nConfigure now?</string>
    <string name="channels">Channels</string>
    <string name="channels_whats_on">What\'s on ...</string>
    <string name="livetv">Live TV</string>
    <string name="rec_recordings">Recordings</string>
	<string name="rec_sortbyname">Name</string>
	<string name="rec_sortbydate">Date</string>
	<string name="rec_play">Play</string>
	<string name="rec_play_start">Play (Start)</string>
	<string name="rec_delete">Delete</string>
	<string name="rec_delete_recording">Delete Recording ?</string>
	<string name="rec_not_found">Recording not found</string>
    <string name="timers">Timer</string>
    <string name="timer_delete">Delete</string>
    <string name="timer_toggle">Toggle Status</string>
	<string name="timer_delete_timer">Delete Timer ?</string>
	<string name="timer_not_found">Timer not found</string>
    <string name="devices_add_vdr">New VDR</string>
    <string name="devices_add_device">New Device</string>
    <string name="devices_delete">Delete</string>
    <string name="devices_delete_device">Delete Device ?</string>
    <string name="settings_general">General</string>
    <string name="settings_devices">Devices</string>
    <string name="settings_devices_summary">Manage devices.</string>
    <string name="settings_standbymode">Disable Standby</string>
    <string name="settings_standbymode_summary">The display stays on, but may be dimmed.</string>
    <string name="settings_hapticfeedback">Vibrate</string>
    <string name="settings_hapticfeedback_summary">Vibrate when a button on the remote is pressed.</string>
    <string name="settings_keyguard">Disable Keyguard</string>
    <string name="settings_keyguard_summary">Disable the Keyguard (lock screen).</string>
    <string name="settings_swipetofinish">Swipe</string>
    <string name="settings_swipetofinish_summary">Swipe right behaves like Back-Key.</string>
    <string name="settings_volume">Volume Control</string>
    <string name="settings_volume_vdr">VDR</string>
    <string name="settings_volume_vdr_summary">Use the phone volume keys to control VDR volume.</string>
    <string name="settings_volume_device">Device</string>
    <string name="settings_volume_up_command">Volume +</string>
    <string name="settings_volume_down_command">Volume -</string>
    <string name="settings_appearance">Appearance</string>
    <string name="settings_alternate_layout">Alternate Layout</string>
    <string name="settings_background">White Background</string>
    <string name="settings_background_summary">Use white background in lists instead of standard theme.</string>
    <string name="settings_logos">Channellogos</string>
    <string name="settings_logos_summary">Use PNG\'s from \'/AndroVDR/logos/\' on SD-Card.</string>
    <string name="settings_logo_backgroundcolor">Backgroundcolor</string>
    <string name="settings_textsizeoffset">Textsize</string>
    <string name="settings_textsizeoffset_summary">Change textsize, relative to default.</string>
    <string name="settings_tabindicatorcolor">Tab Indicator Color</string>
    <string name="settings_diskstatus">Disk Status</string>
    <string name="settings_diskstatus_summary">Show disk status in recordings view.</string>
    <string name="settings_current_channelname">Current Channel</string>
    <string name="settings_current_channelname_summary">Show name of current channel in channel view.</string>
    <string name="settings_detailsleft">Swap List / Detail</string>
    <string name="settings_detailsleft_summary">Swap the position of list and details in landscape mode.</string>
    <string name="settings_livetv">Enable Live-TV</string>
    <string name="settings_livetv_summary">Needs streamdev-server on VDR and an external player such as VPlayer</string>
    <string name="settings_livetv_streamformat">Streamformat</string>
    <string name="settings_miscellaneous">Miscellaneous</string>
    <string name="settings_logging">Logging</string>
    <string name="settings_logging_summary">Where to store log messages.</string>
    <string name="settings_logging_level">Loglevel</string>
    <string name="settings_logging_level_summary">What should be logged.</string>
    <string name="settings_recordingindex">Recordingindex</string>
    <string name="settings_recordingindex_summary">Recreate index on next use.</string>
    <string name="settings_acra">Bug Report</string>
    <string name="settings_acra_summary">Send bug report after crash.</string>
    <string name="settings_name">Name</string>
    <string name="settings_host">Host</string>
    <string name="settings_host_summary">Hostname or IP address (recommended). Must be enabled in svdrphosts.conf.</string>
    <string name="settings_port">Port</string>
    <string name="settings_port_summary">SVDRP-Port (until 1.7.14 2001).</string>
    <string name="settings_macaddress">MAC-Address</string>
    <string name="settings_macaddress_summary">Required for WakeOnLan. Format 00:00:00:00:00:00</string>
    <string name="settings_broadcastaddress">Broadcast-Address</string>
    <string name="settings_broadcastaddress_summary">Broadcast IP address, usually 255.255.255.255</string>
    <string name="settings_livetv_port">Streaming Port</string>
    <string name="settings_livetv_port_summary">Default 3000. Must be enabled in streamdevhosts.conf.</string>
    <string name="settings_vdradmin">VDRAdmin</string>
    <string name="settings_vdradmin_use">VDRAdmin</string>
    <string name="settings_vdradmin_use_summary">Enable VDRAdmin access from main menu.</string>
    <string name="settings_vdradmin_port">Port</string>
    <string name="settings_vdradmin_port_summary">Default 8001.</string>
    <string name="settings_channellist">Channellist</string>
    <string name="settings_channellist_summary">Comma separate list of ranges or values without space.</string>
    <string name="settings_epgmax">Max. EPG Entries</string>
    <string name="settings_epgmax_summary">Maximal entries shown in lists.</string>
    <string name="settings_timer">Timer</string>
    <string name="settings_vps">VPS</string>
    <string name="settings_vps_summary">Use VPS for new timer.</string>
    <string name="settings_margin_start">Margin At Start (Min.)</string>
    <string name="settings_margin_stop">Margin At Stop (Min.)</string>
    <string name="settings_remote">Remote</string>
    <string name="settings_remote_host_summary">Public hostname or IP address of the router.</string>
    <string name="settings_remote_port">SSH Port</string>
    <string name="settings_remote_port_summary">Open port on the router (forwarding configured ?).</string>
    <string name="settings_user">User</string>
    <string name="settings_sshkey">SSH-Key</string>
    <string name="settings_sshkey_summary">Import SSH-Key from SD-Card.</string>
    <string name="settings_remote_local_forwarding_ports">Local Forwading Ports</string>
    <string name="settings_remote_local_port">SVDRP</string>
    <string name="settings_remote_local_port_summary">Local port forwarded to SVDRP-Port on VDR.</string>
    <string name="settings_remote_local_streaming_port">Streaming</string>
    <string name="settings_remote_local_streaming_port_summary">Local port forwarded to Streaming-Port on VDR.</string>
    <string name="settings_remote_local_vdradmin_port">VDRAdmin</string>
    <string name="settings_remote_local_vdradmin_port_summary">Local port forwarded to VDRAdmin-Port on VDR.</string>
    <string name="settings_timeout">Timeout (in ms)</string>
    <string name="settings_characterset">Characterset</string>
    <string name="settings_characterset_summary">Characterset used on VDR.</string>
    <string name="settings_class">Class</string>
    <string name="settings_password">Password</string>
    <string name="settings_epgsearch">EPG Search</string>
    <string name="settings_epgsearch_title">Title</string>
    <string name="settings_epgsearch_subtitle">Subtitle</string>
    <string name="settings_epgsearch_description">Description</string>
    <string name="settings_epgsearch_max">Max. Searchresults</string>
    <string name="settings_epgsearch_max_summary">Maximal entries in searchresult.</string>
    <string name="settings_extremux">Remux</string>
    <string name="settings_extremux_summary">Use externremux.sh on VDR</string>
    <string name="settings_extremux_command">Command</string>
    <string name="settings_extremux_command_summary">Command to activate externremux in streamdev-server. Normally EXT or EXTERN</string>
    <string name="settings_extremux_param">Remux Parameter</string>
    <string name="settings_generalstreaming">Streaming</string>
    <string name="settings_generalstreaming_summary">Enable http streaming from a configurable URL.</string>
    <string name="settings_generalstreaming_url">URL</string>
    <string name="settings_generalstreaming_url_summary">Appended to "http://vdr".</string>
    <string name="main_exit">Quit</string>
    <string name="main_settings">Settings</string>
    <string name="main_about">About</string>
    <string name="main_gestures">Gestures</string>
    <string name="remote_schedule">Schedule</string>
    <string name="remote_timer">Timer</string>
    <string name="remote_channels">Channels</string>
    <string name="remote_records">Records</string>
    <string name="remote_info">Info</string>
    <string name="remote_subtitles">Subtitles</string>
    <string name="remote_setup">Setup</string>
    <string name="remote_user1">User 1</string>
    <string name="remote_user2">User 2</string>
    <string name="remote_user3">User 3</string>
    <string name="remote_audio">Audio</string>
    <string name="remote_commands">Commands</string>
</resources>